<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="titulo">Sincelejo - Sucre</string>
    <string name="app_name">SincelejoTour</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciarses">Iniciar sesión</string>
    <string name="registrar">Registrarse</string>
    <string name="rptPassword">Repetir contraseña</string>
    <string name="email">e-Mail</string>
    <string name="cancel">Cancelar</string>
    <string name="miPerfil">Mi perfil</string>
    <string name="cerrarSes">Cerrar sesión</string>
    <string name="principal">Principal</string>
    <string name="cancelregist">Registro cancelado</string>
    <string name="noEquals">Usuario o contraseña incorrecta</string>
    <string name="sesClosed">Sesión cerrada</string>
    <string name="emptyFields">Hay campos sin llenar</string>
    <string name="usernameP">Usuario:</string>
    <string name="emailP">e-Mail:</string>
    <string name="passNoEq">Las contraseñas no coinciden</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hotel1">Hotel Malibú</string>
    <string name="hotel2">Hotel Arawak</string>
    <string name="hotel3">Hotel Panorama</string>
    <string name="hotels">Hoteles</string>
    <string name="title_activity_hotel">HotelActivity</string>
    <string name="title_activity_bar">BarActivity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="bars">Bares</string>
    <string name="restaurants">Restaurantes</string>
    <string name="restau1">Restaurante 1</string>
    <string name="restau2">Restaurante 2</string>
    <string name="restau3">Restaurante 3</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="title_activity_hotel_d">HotelDActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="bar1">Bar Kantaleta</string>
    <string name="bar2">Bar Wepaje</string>
    <string name="bar3">Bar Ruta 69</string>
    <string name="rest1">Zaitun</string>
    <string name="rest2">Arcanos</string>
    <string name="rest3">La Cajita</string>
    <string name="info">Información del lugar</string>
    <string name="descrest1">Comida Internacional</string>
    <string name="descrest3">Bistró - Café</string>
    <string name="descrest2">Restaurante Gourmet - Bar</string>
    <string name="pricerest1">Desde $15,000</string>
    <string name="pricerest2">Desde $20,000</string>
    <string name="pricerest3">Desde $18,000</string>
    <string name="descbar1">Bar - Discoteca Crossover</string>
    <string name="descbar2">Música vallenata</string>
    <string name="descbar3">Bar retro rockero</string>
    <string name="deschotel1">Hotel lujoso con dos restaurantes</string>
    <string name="deschotel2">Habitaciones cómodas a buen precio</string>
    <string name="deschotel3">Hotel con piscina cercano a centro comercial</string>
    <string name="pricechotel1">Desde $200,000</string>
    <string name="pricechotel2">Desde $169,000</string>
    <string name="pricechotel3">Desde $182,000</string>
    <string name="pricebar1">Desde $5,000</string>
    <string name="pricebar2">Desde $3,000</string>
    <string name="pricebar3">Desde $4,500</string>
    <string name="hotel1Info">Hotel Malibú posee habitaciones especiales para viajes de negocio y vacaciones, ofrece una experiencia única para sus huéspedes, cuenta con espacios abiertos, WiFi y sistemas de audio, disfrute además de nuestros restaurantes, La Guaquería, que ofrece comida internacional y Parrilla y Bar que posee un variado menú de carnes.</string>
    <string name="hotel2Info">El Hotel Arawak Plaza está ubicado en la zona rosa de Sincelejo, lo cual le brinda cercanía a una variedad de bares y restaurantes, tiene confortables habitaciones a un excelente precio, cuenta ademas con centro de negocios y salones de eventos.</string>
    <string name="hotel3Info">Éste hotel cuenta con 47 cómodas habitaciones, gimnasio, piscina, lavandería y salones de eventos, además tiene cercania al centro comercial VIVA Sincelejo, donde puede comprar, comer, ir a cine y divertirse.</string>
    <string name="bar1Info">La rumba llega a otro nivel en Sincelejo en Kantaleta Bar, disfruta con nuestra variedsd de cocteles y bebidas, cuenta con terraza, jardín interno y salón central, además siempre encontrarás musica en vivo y un DJ invitado.</string>
    <string name="bar2Info">Disfruta del mejor vallenato en Wepaje Bar, para los amantes del vallenato, cada viernes disfruta de  nuestra famosa parranda, con promociones en todas las bebidas.</string>
    <string name="bar3Info">Ven a Ruta 69 a disfrutar de la mejor música rock y las mejor ofera de bebidas de la ciudad, nuestro ambiente retro te encantará, no olvides los miércoles de karaoke, podrás ganar muchos premios.</string>
    <string name="rest1Info">Zaitun es un restaurante que ofrece una gran variedad de comida internacional, posee un agradable ambiente y su menú incluye platos de mas de 10 países que darán un gusto a tu paladar.</string>
    <string name="rest2Info">Arcanos es un restaurante gourmet con platos típicos de la región con un estilo gourmet exquisito, además posee bar y un ambiente agradable para que disfrutes tu estadía.</string>
    <string name="rest3Info">La Cajita es un restaurante y café con un ambiente retro, ven y disfruta de nuestra gran variedad de platos, postres y diferentes tipos de café.</string>

</resources>