<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/zaitun"
        android:id="@+id/imgItem"/>
<Space
    android:layout_width="10dp"
    android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/descrItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descrest1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/priceItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pricerest1"
            android:textAlignment="textEnd"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>