<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="1dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.humor.sincelejotour.ProfileActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/miPerfil"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:paddingBottom="10dp"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/perfil"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.28"
            android:gravity="start"
            android:text="@string/usernameP"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/userData"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="start"
            android:text="@string/emailP"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:id="@+id/emailData"
            android:gravity="center"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
